--- a/sequence-memory-game/MainWindow.xaml
+++ b/sequence-memory-game/MainWindow.xaml
@@ -18,7 +18,7 @@
             <TextBlock x:Name="BestScore" FontSize="30" FontWeight="Bold" Margin="100,0,0,0">Best Score: 0</TextBlock>
         </StackPanel>
         
-        <StackPanel Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <StackPanel x:Name="GameGrid" Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" MouseLeftButtonDown="GameGrid_MouseLeftButtonDown">
             <StackPanel Orientation="Horizontal">
                 <Border x:Name="r1" Width="120" Height="120" CornerRadius="20" Background="LightGray">
                 </Border>
@@ -45,6 +45,6 @@
             </StackPanel>
         </StackPanel>
 
-        <Button Grid.Row="2" x:Name="StartGame" Content="Start Game" Height="40" Width="150" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Button Grid.Row="2" x:Name="StartGame" Content="Start Game" Height="40" Width="150" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" Click="StartGame_Click" />
     </Grid>
 </Window>
